--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "nyc mocha",
-    "start": "node server.js"
+    "start": "node server.js",
+    "lint":"eslint src/*.js test/*.js public/js/*.js *.js"
   },
   "repository": {
     "type": "git",
