--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "nyc mocha",
     "start": "node server.js",
-    "lint":"eslint src/*.js test/*.js public/js/*.js *.js"
+    "lint": "eslint src/*.js test/*.js public/js/*.js *.js",
+    "setup": "chmod +x scripts/runScripts.sh; ./scripts/runScripts.sh"
   },
   "repository": {
     "type": "git",
