|#3|Ragini/Rivu| modofoed eslintrc.json to warn on commented line

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,9 @@
     "ecmaVersion": 2018
   },
   "rules": {
+    "no-inline-comments":"warn",
+    "multiline-comment-style":"warn",
+    "line-comment-position":["warn",{ "position": "beside" }],
     "indent": ["error", 2],
     "quotes": ["error", "single"],
     "linebreak-style": ["error", "unix"],
