--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "nyc mocha",
-    "start": "node server.js",
+    "start": "node -r dotenv/config server.js  ",
     "lint": "eslint src/*.js test/*.js public/js/*.js *.js",
     "setup": "chmod +x scripts/runScripts.sh; ./scripts/runScripts.sh"
   },
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "cookie-session": "^1.4.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
