|#12|Rivu/Satheesh| added npm script to create db with dummy data

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "nyc mocha",
     "start": "node -r dotenv/config server.js  ",
     "lint": "eslint src/*.js test/*.js public/js/*.js *.js",
-    "setup": "chmod +x scripts/runScripts.sh; ./scripts/runScripts.sh"
+    "setup": "chmod +x scripts/runScripts.sh; ./scripts/runScripts.sh",
+    "createDb":"run(){ cat data/insertTable.sql data/insertData.sql | sqlite3 data/$1; }; run"
   },
   "repository": {
     "type": "git",
