|#5|santhosh/ragini| modified travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ notifications:
       - 'Repo `%{repository_slug}` *%{result}* build (<%{build_url}|#%{build_number}>) for commit (<%{compare_url}|%{commit}>) on branch `%{branch}`  by %{author}.'
       - 'Execution time: *%{duration}*'
       - 'Message: %{message}'
+before-script:
+  - npm run createDb test.db
