|#12|Rivu/Satheesh| added two different script to create test db and main db

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ notifications:
       - 'Execution time: *%{duration}*'
       - 'Message: %{message}'
 before-script:
-  - npm run createDb test.db
+  - npm run createTestDb
