--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint src/*.js test/*.js public/js/*.js *.js",
     "setup": "chmod +x scripts/runScripts.sh; ./scripts/runScripts.sh",
     "createDb": "run(){ cat data/insertTable.sql | sqlite3 data/inquire.db; }; run",
-    "createTestDb" :"run(){ cat data/insertTable.sql data/insertData.sql | sqlite3 data/test.db; }; run"
+    "createTestDb": "run(){ cat data/insertTable.sql data/insertData.sql | sqlite3 data/test.db; }; run"
   },
   "repository": {
     "type": "git",
@@ -30,7 +30,8 @@
     "mocha": "^8.0.1",
     "nyc": "^15.1.0",
     "sinon": "^9.0.2",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "nock": "^13.0.2"
   },
   "dependencies": {
     "cookie-session": "^1.4.0",
@@ -38,6 +39,7 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "pug": "^3.0.0",
     "sqlite3": "^5.0.0",
     "superagent": "^5.3.1"
   }
