--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "test": "nyc mocha",
     "start": "node -r dotenv/config server.js  ",
+    "dev" : "nodemon -r dotenv/config server.js",
     "lint": "eslint src/*.js test/*.js public/js/*.js *.js",
     "setup": "chmod +x scripts/runScripts.sh; ./scripts/runScripts.sh",
     "createDb": "run(){ cat data/insertTable.sql | sqlite3 data/inquire.db; }; run",
