--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "nyc mocha",
     "start": "node -r dotenv/config server.js  ",
-    "dev" : "nodemon -r dotenv/config server.js",
+    "dev": "nodemon -r dotenv/config server.js",
     "lint": "eslint src/*.js test/*.js public/js/*.js *.js",
     "setup": "chmod +x scripts/runScripts.sh; ./scripts/runScripts.sh",
     "createDb": "run(){ cat data/insertTable.sql | sqlite3 data/inquire.db; }; run",
@@ -38,7 +38,9 @@
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "knex": "^0.21.2",
     "morgan": "^1.10.0",
+    "nesthydrationjs": "^2.0.0",
     "nodemon": "^2.0.4",
     "pug": "^3.0.0",
     "sqlite3": "^5.0.0",
