|#27|Ragini/Rivu| update npm lint to run eslint on library also

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "nyc mocha",
     "start": "node -r dotenv/config server.js  ",
     "dev": "nodemon -r dotenv/config server.js",
-    "lint": "eslint src/*.js test/*.js public/js/*.js *.js",
+    "lint": "eslint src/*.js test/*.js public/js/*.js *.js library/*.js",
     "setup": "chmod +x scripts/runScripts.sh; ./scripts/runScripts.sh",
     "createDb": "run(){ cat data/insertTable.sql | sqlite3 data/inquire.db; }; run",
     "createTestDb": "run(){ cat data/insertTable.sql data/insertData.sql | sqlite3 data/test.db; }; run"
