|#27|Ragini/Rivu| added coveralls

--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
   "homepage": "https://github.com/unphydra/R-2_S-2-Inquire#readme",
   "devDependencies": {
     "chai": "^4.2.0",
+    "coveralls": "^3.1.0",
     "eslint": "^7.5.0",
     "mocha": "^8.0.1",
+    "nock": "^13.0.2",
     "nyc": "^15.1.0",
     "sinon": "^9.0.2",
-    "supertest": "^4.0.2",
-    "nock": "^13.0.2"
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "cookie-session": "^1.4.0",
