--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,6 @@ notifications:
       - 'Repo `%{repository_slug}` *%{result}* build (<%{build_url}|#%{build_number}>) for commit (<%{compare_url}|%{commit}>) on branch `%{branch}`  by %{author}.'
       - 'Execution time: *%{duration}*'
       - 'Message: %{message}'
+
+script: "sbt clean coverage test"
+after_success: "sbt coveralls"
